--- a/views/home.html
+++ b/views/home.html
@@ -64,7 +64,7 @@
 					{% for item in articles %}
 					<div class="article shadow">
 						<div>
-							<a>
+							<a href="/article/{{item.id}}">
 								<p>{{item.title}}</p>
 							</a>
 						</div>
