--- a/views/edit.html
+++ b/views/edit.html
@@ -2,15 +2,16 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
+	<base href="{{baseUrl}}" />
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<title>发帖</title>
-	<link rel="stylesheet" href="/public/plug/layui/css/layui.css">
-	<link rel="stylesheet" href="/public/css/login.css">
-	<script type="text/javascript" src="/public/js/jquery-3.6.0.min.js"></script>
-	<script type="text/javascript" src="/public/plug/layui/layui.js"></script>
-	<script type="text/javascript" src="/public/js/iceEditor.js"></script>
+	<link rel="stylesheet" href="./public/plug/layui/css/layui.css">
+	<link rel="stylesheet" href="./public/css/login.css">
+	<script type="text/javascript" src="./public/js/jquery-3.6.0.min.js"></script>
+	<script type="text/javascript" src="./public/plug/layui/layui.js"></script>
+	<script type="text/javascript" src="./public/js/iceEditor.js"></script>
 </head>
 
 <body>
@@ -53,12 +54,12 @@
 		</div>
 	</div>
 </body>
-<script type="text/javascript" src="/public/js/clipboard.min.js"></script>
+<script type="text/javascript" src="./public/js/clipboard.min.js"></script>
 <script type="text/javascript">
 	console.log(ice)
 	const instance = ice.editor("content", function () {
 		this.setValue(`{{article.content | safe }}`);
-		this.uploadUrl = "/upload";
+		this.uploadUrl = "./upload";
 		this.width = "90%";
 		this.height = '100%'; //高度
 		this.maxWindow = false;
@@ -78,14 +79,14 @@
 				return;
 			}
 			layer.load(2);
-			$.post("/edit", { tag, title, content, level, id: `{{article.id}}` }, function (r) {
+			$.post("./edit", { tag, title, content, level, id: `{{article.id}}` }, function (r) {
 				if (r.code === 200) {
 					layer.msg('提交成功', { icon: 1, time: 1500 }, function () {
-						location.replace('/');
+						location.replace('./');
 					})
 				} else {
 					layer.closeAll('loading');
-					layer.msg(res.msg, { icon: 5 });
+					layer.msg(r.msg, { icon: 5 });
 				}
 			}, "JSON");
 		})
