--- a/views/list.html
+++ b/views/list.html
@@ -11,27 +11,41 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
+	<base href="{{baseUrl}}" />
 	<meta http-equiv="Content-Type" content="text/html; Charset=gb2312">
 	<meta http-equiv="Content-Language" content="zh-CN">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<title>不落阁 - 一个.NET程序员的个人博客网站</title>
-	<link rel="shortcut icon" href="/public/images/Logo_40.png" type="image/x-icon">
+	<link rel="shortcut icon" href="./public/images/Logo_40.png" type="image/x-icon">
 	<!--Layui-->
-	<link href="/public/plug/layui/css/layui.css" rel="stylesheet" />
+	<link href="./public/plug/layui/css/layui.css" rel="stylesheet" />
 	<!--font-awesome-->
-	<link href="/public/plug/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
+	<link href="./public/plug/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
 	<!--全局样式表-->
-	<link href="/public/css/global.css" rel="stylesheet" />
+	<link href="./public/css/global.css" rel="stylesheet" />
 	<!-- 本页样式表 -->
-	<link href="/public/css/home.css" rel="stylesheet" />
-	<script type="text/javascript" src="/public/js/jquery-3.6.0.min.js"></script>
-	<script type="text/javascript" src="/public/plug/layui/layui.js"></script>
-	<script type="text/javascript" src="/public/js/login.js"></script>
+	<link href="./public/css/home.css" rel="stylesheet" />
+	<script type="text/javascript" src="./public/js/jquery-3.6.0.min.js"></script>
+	<script type="text/javascript" src="./public/plug/layui/layui.js"></script>
+	<script type="text/javascript" src="./public/js/login.js"></script>
 </head>
 
 <body>
 	<!-- 导航 -->
 	<!-- 主体（一般只改变这里的内容） -->
+	<nav class="blog-nav layui-header">
+		<div class="blog-container">
+			<!-- QQ互联登陆 -->
+			<a href="javascript:;" class="blog-user layui-hide">
+				<img src="/public/images/Absolutely.jpg" alt="Absolutely" title="Absolutely" />
+			</a>
+			<!-- 不落阁 -->
+			<a class="blog-logo" href="/">不落阁</a>
+			<!-- 导航菜单 -->
+
+			<!-- 手机和平板的导航开关 -->
+		</div>
+	</nav>
 	<div class="blog-body">
 		<!-- canvas -->
 		<canvas id="canvas-banner" style="background: #393D49;"></canvas>
@@ -64,7 +78,7 @@
 					{% for item in articles %}
 					<div class="article shadow">
 						<div>
-							<a href="/article/{{item.id}}">
+							<a href="./article/{{item.id}}">
 								<p>{{item.title}}</p>
 							</a>
 						</div>
@@ -75,11 +89,17 @@
 							<span class="article-author"><i class="fa fa-user"></i>&nbsp;&nbsp;{{item.userName}}</span>
 							<span><i class="fa fa-tag"></i>&nbsp;&nbsp;<a href="#">{{item.tagName}}</a></span>
 							<span><i class="layui-icon layui-icon-edit"></i>&nbsp;&nbsp;<a
-									href="/edit/{{item.id}}">编辑</a></span>
+									href="./edit/{{item.id}}">编辑</a></span>
+							{% if item.article_state %}
 							<span class="deleteButton" data-id="{{item.id}}"><i
 									class="layui-icon layui-icon-delete"></i>&nbsp;&nbsp;删除</span>
-							<span class="article-viewinfo"><i class="fa fa-eye"></i>&nbsp;0</span>
-							<span class="article-viewinfo"><i class="fa fa-commenting"></i>&nbsp;4</span>
+							{% else %}
+							<span class="deleteButton" data-id="{{item.id}}"><i
+									class="layui-icon layui-icon-delete"></i>&nbsp;&nbsp;恢复</span>
+							{% endif %}
+							<span class="article-viewinfo"><i class="fa fa-eye"></i>&nbsp;{{item.read_count}}</span>
+							<span class="article-viewinfo"><i
+									class="fa fa-commenting"></i>&nbsp;{{item.commentCount}}</span>
 						</div>
 					</div>
 					{% endfor %}
@@ -92,7 +112,11 @@
 					{% if login %}
 					<div class="blogerinfo shadow">
 						<div class="blogerinfo-figure">
-							<img src="/public/images/Absolutely.jpg" alt="Absolutely" />
+							{% if emptyString(avatar) %}
+							<img id="avatarContainer" src="./public/images/Absolutely.jpg" alt="Absolutely" />
+							{% else %}
+							<img id="avatarContainer" src="{{avatar}}" alt="Absolutely" />
+							{% endif %}
 						</div>
 						<div class="person-box">
 							<div class="person-box-item">
@@ -100,9 +124,9 @@
 								<p class="blogerinfo-introduce"><span>等级:</span>{{data.data.level}}</p>
 							</div>
 							<div class="person-box-item">
-								<p class="blogerinfo-nickname"><a href="/add"><button
+								<p class="blogerinfo-nickname"><a href="./add"><button
 											class="layui-btn layui-btn-primary layui-border-blue">发帖</button></a></p>
-								<p><a href="/list/1"><span>帖子:</span>{{post_count}}</a></p>
+								<p><a href="./list/1"><span>帖子:</span>{{post_count}}</a></p>
 							</div>
 						</div>
 						<hr />
@@ -129,18 +153,10 @@
 					<div class="blog-module shadow">
 						<div class="blog-module-title">热文排行</div>
 						<ul class="fa-ul blog-module-ul">
-							<li><i class="fa-li fa fa-hand-o-right"></i><a href="detail.html">Web安全之跨站请求伪造CSRF</a></li>
-							<li><i class="fa-li fa fa-hand-o-right"></i><a href="detail.html">ASP.NET MVC
-									防范跨站请求伪造（CSRF）</a></li>
-							<li><i class="fa-li fa fa-hand-o-right"></i><a href="detail.html">常用正则表达式</a></li>
-							<li><i class="fa-li fa fa-hand-o-right"></i><a href="detail.html">EF CodeFirst数据迁移常用指令</a>
-							</li>
-							<li><i class="fa-li fa fa-hand-o-right"></i><a href="detail.html">浅谈.NET Framework基元类型</a>
-							</li>
-							<li><i class="fa-li fa fa-hand-o-right"></i><a href="detail.html">C#基础知识回顾-扩展方法</a></li>
-							<li><i class="fa-li fa fa-hand-o-right"></i><a href="detail.html">一步步制作时光轴（一）（HTML篇）</a>
-							</li>
-							<li><i class="fa-li fa fa-hand-o-right"></i><a href="detail.html">一步步制作时光轴（二）（CSS篇）</a></li>
+							{% for item in hotArticles %}
+							<li><i class="fa-li fa fa-hand-o-right"></i><a
+									href="./article/{{item.id}}">{{item.title}}</a></li>
+							{% endfor %}
 						</ul>
 					</div>
 				</div>
@@ -165,7 +181,7 @@
 				</div>
 				<div class="layui-form-item">
 					<input type="checkbox" name="remember" title="记住我" lay-skin="primary">
-					<a href="/register" class="layui-link pull-right">注册账号</a>
+					<a href="./register" class="layui-link pull-right">注册账号</a>
 				</div>
 				<div class="layui-form-item login-button-box">
 					<button class="layui-btn layui-btn-fluid" lay-filter="loginSubmit" lay-submit>登录</button>
@@ -201,11 +217,11 @@
 	<!--遮罩-->
 	<div class="blog-mask animated layui-hide"></div>
 	<!-- layui.js -->
-	<script src="/public/plug/layui/layui.js"></script>
+	<script src="./public/plug/layui/layui.js"></script>
 	<!-- 全局脚本 -->
-	<script src="/public/js/global.js"></script>
+	<script src="./public/js/global.js"></script>
 	<!-- 本页脚本 -->
-	<script src="/public/js/home.js"></script>
+	<script src="./public/js/home.js"></script>
 </body>
 <script>
 	function toLogin() {
@@ -226,7 +242,7 @@
 			limit: 10,
 			jump: function (obj, first) {
 				if (!first) {
-					window.location.href = `/${obj.curr}`;
+					window.location.href = `./${obj.curr}`;
 				}
 			}
 		});
@@ -234,11 +250,11 @@
 		$(".deleteButton").off("click").on("click", function () {
 			var that = this;
 			let id = $(this).attr("data-id");
-			layer.confirm('确定删除吗?', {
+			layer.confirm('确定执行该操作吗?', {
 				btn: ['确定', '取消'] //可以无限个按钮
 			}, function (index, layero) {
 				layer.load(2);
-				$.post(`/delete/${id}`, { id }, function (r) {
+				$.post(`./delete/${id}`, { id }, function (r) {
 					if (r.code === 200) {
 						layer.msg('提交成功', { icon: 1, time: 1500 }, function () {
 							window.location.reload();
@@ -251,12 +267,31 @@
 			}, function (index) {
 				//按钮【按钮二】的回调
 			});
+		});
+
+		$("#avatarContainer").off("click").on("click", function () {
+			console.log("click")
+			layer.open({
+				type: 2,
+				area: ['600px', '330px'],
+				content: [`{{baseUrl}}./personEdit`, 'no'], //这里content是一个URL，如果你不想让iframe出现滚动条，你还可以content: ['http://sentsin.com', 'no']
+				success: function (layero, index) {
+				}
+			});
 		})
 	});
+	window.requestRefresh = function(){
+		window.location.reload();
+	}
 </script>
 <style>
-	.deleteButton{
+	.deleteButton {
+		cursor: pointer;
+	}
+
+	#avatarContainer {
 		cursor: pointer;
 	}
 </style>
+
 </html>
