--- a/views/login.html
+++ b/views/login.html
@@ -2,13 +2,14 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
+	<base href="{{baseUrl}}" />
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<title>用户登录</title>
-	<link rel="stylesheet" href="/public/plug/layui/css/layui.css">
-	<link rel="stylesheet" href="/public/css/login.css">
-	<script type="text/javascript" src="/public/plug/layui/layui.js"></script>
+	<link rel="stylesheet" href="./public/plug/layui/css/layui.css">
+	<link rel="stylesheet" href="./public/css/login.css">
+	<script type="text/javascript" src="./public/plug/layui/layui.js"></script>
 </head>
 
 <body>
@@ -29,7 +30,7 @@
 			</div>
 			<div class="layui-form-item">
 				<input type="checkbox" name="remember" title="记住我" lay-skin="primary">
-				<a href="/register" class="layui-link pull-right">注册账号</a>
+				<a href="./register" class="layui-link pull-right">注册账号</a>
 			</div>
 			<div class="layui-form-item">
 				<button class="layui-btn layui-btn-fluid" lay-filter="loginSubmit" lay-submit>登录</button>
@@ -37,8 +38,8 @@
 		</form>
 	</div>
 
-	<script type="text/javascript" src="/public/js/clipboard.min.js"></script>
-	<script type="text/javascript" src="/public/js/login.js"></script>
+	<script type="text/javascript" src="./public/js/clipboard.min.js"></script>
+	<script type="text/javascript" src="./public/js/login.js"></script>
 </body>
 <style>
 	body:before {
