--- a/views/reg.html
+++ b/views/reg.html
@@ -2,13 +2,14 @@
 <html lang="cn">
 
 <head>
+	<base href="{{baseUrl}}" />
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<title>用户注册</title>
-	<link rel="stylesheet" href="/public/plug/layui/css/layui.css">
-	<link rel="stylesheet" href="/public/css/login.css">
-	<script type="text/javascript" src="/public/plug/layui/layui.js"></script>
+	<link rel="stylesheet" href="./public/plug/layui/css/layui.css">
+	<link rel="stylesheet" href="./public/css/login.css">
+	<script type="text/javascript" src="./public/plug/layui/layui.js"></script>
 </head>
 
 <body>
@@ -33,7 +34,7 @@
 			</div>
 
 			<div class="layui-form-item">
-				<a href="/login" class="layui-link">返回登录</a>
+				<a href="./login" class="layui-link">返回登录</a>
 				<!-- <a th:href="@{/forget}" class="layui-link pull-right">忘记密码</a> -->
 			</div>
 			<div class="layui-form-item" style="margin-bottom: 20px;">
@@ -41,8 +42,8 @@
 			</div>
 		</form>
 	</div>
-	<script type="text/javascript" src="/public/js/clipboard.min.js"></script>
-	<script type="text/javascript" src="/public/js/login.js"></script>
+	<script type="text/javascript" src="./public/js/clipboard.min.js"></script>
+	<script type="text/javascript" src="./public/js/login.js"></script>
 </body>
 <style>
 	body:before {
