--- a/views/home.html
+++ b/views/home.html
@@ -15,7 +15,7 @@
 	<meta http-equiv="Content-Type" content="text/html; Charset=gb2312">
 	<meta http-equiv="Content-Language" content="zh-CN">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<title>不落阁 - 一个.NET程序员的个人博客网站</title>
+	<title>Blog</title>
 	<link rel="shortcut icon" href="./public/images/Logo_40.png" type="image/x-icon">
 	<!--Layui-->
 	<link href="./public/plug/layui/css/layui.css" rel="stylesheet" />
