--- a/views/home.html
+++ b/views/home.html
@@ -1,22 +1,13 @@
-﻿<!--
-    
- @Name：不落阁整站模板源码
- @Author：Absolutely
- @Site：http://www.lyblogs.cn
-
- -->
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
 	<base href="{{baseUrl}}" />
-	<meta http-equiv="Content-Type" content="text/html; Charset=gb2312">
+	<meta http-equiv="Content-Type" content="text/html; Charset=utf-8">
 	<meta http-equiv="Content-Language" content="zh-CN">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<title>Blog</title>
-	<link rel="shortcut icon" href="./public/images/Logo_40.png" type="image/x-icon">
 	<!--Layui-->
 	<link href="./public/plug/layui/css/layui.css" rel="stylesheet" />
 	<!--font-awesome-->
@@ -53,11 +44,7 @@
 				<div class="home-tips shadow">
 					<i style="float:left;line-height:17px;" class="fa fa-volume-up"></i>
 					<div class="home-tips-container">
-						<span style="color: #009688">偷偷告诉大家，本博客的后台管理也正在制作，为大家准备了游客专用账号！</span>
-						<span style="color: red">网站新增留言回复啦！使用QQ登陆即可回复，人人都可以回复！</span>
-						<span style="color: red">如果你觉得网站做得还不错，来Fly社区点个赞吧！<a href="http://fly.layui.com/case/2017/"
-								target="_blank" style="color:#01AAED">点我前往</a></span>
-						<span style="color: #009688">不落阁 &nbsp;—— &nbsp;一个.NET程序员的个人博客，新版网站采用Layui为前端框架，目前正在建设中！</span>
+						<span style="color: #009688">myblog</span>
 					</div>
 				</div>
 				<!--左边文章列表-->
@@ -160,28 +147,10 @@
 	</div>
 	<!-- 底部 -->
 	<footer class="blog-footer">
-		<p><span>Copyright</span><span>&copy;</span><span>2022</span><a href="/">不落阁</a><span>Design
+		<p><span>Copyright</span><span>&copy;</span><span>2022</span><a href="/">Blog</a><span>Design
 				By Deno</span></p>
 	</footer>
-	<!--侧边导航-->
-	<ul class="layui-nav layui-nav-tree layui-nav-side blog-nav-left layui-hide" lay-filter="nav">
-		<li class="layui-nav-item layui-this">
-			<a href="home.html"><i class="fa fa-home fa-fw"></i>&nbsp;网站首页</a>
-		</li>
-	</ul>
-	<!--分享窗体-->
-	<div class="blog-share layui-hide">
-		<div class="blog-share-body">
-			<div style="width: 200px;height:100%;">
-				<div class="bdsharebuttonbox">
-					<a class="bds_qzone" data-cmd="qzone" title="分享到QQ空间"></a>
-					<a class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a>
-					<a class="bds_weixin" data-cmd="weixin" title="分享到微信"></a>
-					<a class="bds_sqq" data-cmd="sqq" title="分享到QQ好友"></a>
-				</div>
-			</div>
-		</div>
-	</div>
+
 	<!--遮罩-->
 	<div class="blog-mask animated layui-hide"></div>
 	<!-- layui.js -->
